--- a/uhtml/index.html
+++ b/uhtml/index.html
@@ -2,7 +2,7 @@
 <html lang="de">
   <head>
     <meta charset="UTF-8">
-    <title>ADA Template v1.1 Oct 2022</title>
+    <title>Sample Content for Template Testing</title>
     <link type="text/css" rel="stylesheet" href="css/book.css" />
     <style>
       a.fn {
@@ -92,7 +92,7 @@
   </head>
   <body class="user-contents">
     <div class="titlepage frontmatter">
-      <h1 class="booktitle">ADA Template v1.1 Oct 2022</h1>
+      <h1 class="booktitle">Sample Content for Template Testing</h1>
       <h2 class="booksubtitle">Demonstration of Markup and Template for Typesetting</h2>
       <h3 class="bookauthor">von The Author</h3>
       <h4 class="bookversion">v1.1 31 Oct 2022</h4>
